# 상대경로 수정

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/common.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="team-project/style/common.css">
+    <link rel="stylesheet" href="team-project/style/style.css">
 </head>
 <body>
     <header>
@@ -59,7 +59,7 @@
             <div>Y2K <i class="fas fa-smile-beam"></i></div>
         </h2>
         <div class="item-list">
-            <div class="box"><img src="../img/FLAMESBIKESH.avif" alt="FLAMESBIKESH">
+            <div class="box"><img src="team-project/img/FLAMESBIKESH.avif" alt="FLAMESBIKESH">
                 <i class="far fa-heart"></i>
                 <p class="price">119,000원</p>
                 <h3>
@@ -69,7 +69,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/BBCREPETT.avif" alt="BBCREPETT">
+            <div class="box"><img src="team-project/img/BBCREPETT.avif" alt="BBCREPETT">
                 <i class="far fa-heart"></i>
                 <p class="price">129,000원</p>
                 <h3>
@@ -79,7 +79,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/BBCREPETT2.avif" alt="BBCREPETT2">
+            <div class="box"><img src=".team-project/img/BBCREPETT2.avif" alt="BBCREPETT2">
                 <i class="far fa-heart"></i>
                 <p class="price">129,000원</p>
                 <h3>
@@ -89,7 +89,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/VRCTJKT.avif" alt="VRCTJKT">
+            <div class="box"><img src="team-project/img/VRCTJKT.avif" alt="VRCTJKT">
                 <i class="far fa-heart"></i>
                 <p class="price">239,000원</p>
                 <h3>
@@ -99,7 +99,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/pants.avif" alt="pants">
+            <div class="box"><img src="team-project/img/pants.avif" alt="pants">
                 <i class="far fa-heart"></i>
                 <p class="price">99,000원</p>
                 <h3>
@@ -109,7 +109,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/pants2.avif" alt="pants2">
+            <div class="box"><img src="team-project/img/pants2.avif" alt="pants2">
                 <i class="far fa-heart"></i>
                 <p class="price">99,000원</p>
                 <h3>
@@ -119,7 +119,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/VRCTGRAPHICT.avif" alt="VRCTGRAPHICT">
+            <div class="box"><img src="team-project/img/VRCTGRAPHICT.avif" alt="VRCTGRAPHICT">
                 <i class="far fa-heart"></i>
                 <p class="price">55,000원</p>
                 <h3>
@@ -129,7 +129,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/GRFTEE.avif" alt="GRFTEE">
+            <div class="box"><img src="team-project/img/GRFTEE.avif" alt="GRFTEE">
                 <i class="far fa-heart"></i>
                 <p class="price">555,000원</p>
                 <h3>
@@ -139,7 +139,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src="../img/SAMBA.avif" alt="SAMBA">
+            <div class="box"><img src="team-project/img/SAMBA.avif" alt="SAMBA">
                 <i class="far fa-heart"></i>
                 <p class="price">139,000원</p>
                 <h3>
@@ -149,7 +149,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/SAMBAOGW.avif" alt="SAMBAOGW">
+            <div class="box"><img src="team-project/img/SAMBAOGW.avif" alt="SAMBAOGW">
                 <i class="far fa-heart"></i>
                 <p class="price">139,000원</p>
                 <h3>
@@ -159,7 +159,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/OZMILLEN.avif" alt="OZMILLEN">
+            <div class="box"><img src="team-project/img/OZMILLEN.avif" alt="OZMILLEN">
                 <i class="far fa-heart"></i>
                 <p class="price">109,000원</p>
                 <h3>
@@ -169,7 +169,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/ADISTAR.avif" alt="ADISTAR">
+            <div class="box"><img src="team-project/img/ADISTAR.avif" alt="ADISTAR">
                 <i class="far fa-heart"></i>
                 <p class="price">119,000원</p>
                 <h3>
@@ -183,28 +183,28 @@
     </section>
     <section class="banners">
         <div class="banner-list">
-            <div class="box"><img src="../img/banner1.gif" alt="banner1">
+            <div class="box"><img src="team-project/img/banner1.gif" alt="banner1">
                 <h3>
                     2024 NATIONAL FOOTBALL KITS
                 </h3>
                 <p>올여름, 전 세계를 열광시킬 축구 무대를 아디다스 풋볼과 함께 즐겨 보세요!</p>
                 <a href="#">지금 구매하기</a>
             </div>
-            <div class="box"><img src="../img/banner2.avif" alt="banner2">
+            <div class="box"><img src="team-project/img/banner2.avif" alt="banner2">
                 <h3>
                     An adicolor story
                 </h3>
                 <p>나를 색칠하는 스타일 아이콘, 아디컬러</p>
                 <a href="#">지금 구매하기</a>
             </div>
-            <div class="box"><img src="../img/banner3.avif" alt="banner2">
+            <div class="box"><img src="team-project/img/banner3.avif" alt="banner2">
                 <h3>
                     2000'S RUNNING
                 </h3>
                 <p>오늘의 감각으로 다시 태어난 2000년대 디자인 코드</p>
                 <a href="#">지금 구매하기</a>
             </div>
-            <div class="box"><img src="../img/banner4.gif" alt="banner2">
+            <div class="box"><img src="team-project/img/banner4.gif" alt="banner2">
                 <h3>
                     SOFT GORFCORE
                 </h3>
@@ -219,7 +219,7 @@
             <div>Best of adidas <i class="fas fa-fire"></i></div>
         </h2>
         <div class="item-list">
-            <div class="box"><img src="../img/BOXERHOG.avif" alt="BOXERHOG">
+            <div class="box"><img src="team-project/img/BOXERHOG.avif" alt="BOXERHOG">
                 <i class="far fa-heart"></i>
                 <p class="price">99,000원</p>
                 <h3>
@@ -229,7 +229,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/BERMUDA.avif" alt="BERMUDA">
+            <div class="box"><img src="team-project/img/BERMUDA.avif" alt="BERMUDA">
                 <i class="far fa-heart"></i>
                 <p class="price">139,000원</p>
                 <h3>
@@ -239,7 +239,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/CAMPUS.avif" alt="CAMPUS">
+            <div class="box"><img src="team-project/img/CAMPUS.avif" alt="CAMPUS">
                 <i class="far fa-heart"></i>
                 <p class="price">129,000원</p>
                 <h3>
@@ -249,7 +249,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/HANDBALL.avif" alt="HANDBALL">
+            <div class="box"><img src="team-project/img/HANDBALL.avif" alt="HANDBALL">
                 <i class="far fa-heart"></i>
                 <p class="price">139,000원</p>
                 <h3>
@@ -259,7 +259,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/RESPAWNS.avif" alt="RESPAWNS">
+            <div class="box"><img src="team-project/img/RESPAWNS.avif" alt="RESPAWNS">
                 <i class="far fa-heart"></i>
                 <p class="price">129,000원</p>
                 <h3>
@@ -269,7 +269,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/GAZEL.avif" alt="GAZEL">
+            <div class="box"><img src="team-project/img/GAZEL.avif" alt="GAZEL">
                 <i class="far fa-heart"></i>
                 <p class="price">159,000원</p>
                 <h3>
@@ -279,7 +279,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/GAZEL2.avif" alt="GAZEL2">
+            <div class="box"><img src="team-project/img/GAZEL2.avif" alt="GAZEL2">
                 <i class="far fa-heart"></i>
                 <p class="price">139,000원</p>
                 <h3>
@@ -289,7 +289,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/GAZEL3.avif" alt="GAZEL3">
+            <div class="box"><img src="team-project/img/GAZEL3.avif" alt="GAZEL3">
                 <i class="far fa-heart"></i>
                 <p class="price">129,000원</p>
                 <h3>
@@ -299,7 +299,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/SAMBAOG.avif" alt="SAMBAOG">
+            <div class="box"><img src="team-project/img/SAMBAOG.avif" alt="SAMBAOG">
                 <i class="far fa-heart"></i>
                 <p class="price">89,000원</p>
                 <h3>
@@ -309,7 +309,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/BERMUDA2.avif" alt="BERMUDA2">
+            <div class="box"><img src="team-project/img/BERMUDA2.avif" alt="BERMUDA2">
                 <i class="far fa-heart"></i>
                 <p class="price">139,000원</p>
                 <h3>
@@ -319,7 +319,7 @@
                     Shoes
                 </p>
             </div>
-            <div class="box"><img src="../img/GAZEL4.avif" alt="GAZEL4">
+            <div class="box"><img src="team-project/img/GAZEL4.avif" alt="GAZEL4">
                 <i class="far fa-heart"></i>
                 <p class="price">159,000원</p>
                 <h3>
@@ -333,28 +333,28 @@
     </section>
     <section class="banners">
         <div class="banner-list">
-            <div class="box"><img src="../img/tip1.avif" alt="tip1">
+            <div class="box"><img src="team-project/img/tip1.avif" alt="tip1">
                 <h3>
                     첫 마라톤 참가를 위한 훈련 꿀팁
                 </h3>
                 <p>다가오는 2024 서울마라톤! 체계적으로 준비하려면 어떻게 시작해야 할까요? 새로운 기록 달성을 위해 꿀팁을 확인해 보세요.</p>
                 <a href="#">지금 확인 하기</a>
             </div>
-            <div class="box"><img src="../img/tip2.avif" alt="tip2">
+            <div class="box"><img src="team-project/img/tip2.avif" alt="tip2">
                 <h3>
                     마라톤 준비 전 영양 섭취 가이드
                 </h3>
                 <p>마라톤을 준비하는 기간 뿐만 아니라 대회 당일까지! 건강하게 영양섭취 하는 방법을 확인해 보세요.</p>
                 <a href="#">지금 확인 하기</a>
             </div>
-            <div class="box"><img src="../img/tip3.avif" alt="tip3">
+            <div class="box"><img src="team-project/img/tip3.avif" alt="tip3">
                 <h3>
                     나에게 맞는 러닝화 찾는 팁
                 </h3>
                 <p>몸을 지탱하고, 달리는 데 필요한 원동력을 제공하는 러닝 필수템! 나에게 맞는 러닝화를 찾는 꿀팁을 확인해 보세요.</p>
                 <a href="#">지금 확인 하기</a>
             </div>
-            <div class="box"><img src="../img/tip4.avif" alt="tip4">
+            <div class="box"><img src="team-project/img/tip4.avif" alt="tip4">
                 <h3>
                     첫 마라톤의 마지막 훈련 팁
                 </h3>
