--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         </div>
         <div class="underline">
-            <h1><a href="team-project/html/main.html"><img src="../img/ADIDASLOGO.png" alt="logo"></a></h1>
+            <h1><a href="team-project/html/main.html"><img src="team-project/img/ADIDASLOGO.png" alt="logo"></a></h1>
             <ul class="category">
                 <li><a href="adidas-project-men/adidas-project-men/index.html">MEN</a></li>
                 <li><a href="adidas-project-women-page/adidas-team-project--women/adidas-team-project--women/adidas women web/adidas women .html">WOMEN</a></li>
