# 점하나 지움

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     Clothing
                 </p>
             </div>
-            <div class="box"><img src=".team-project/img/BBCREPETT2.avif" alt="BBCREPETT2">
+            <div class="box"><img src="team-project/img/BBCREPETT2.avif" alt="BBCREPETT2">
                 <i class="far fa-heart"></i>
                 <p class="price">129,000원</p>
                 <h3>
