--- a/adidas-project-men/adidas-project-men/index.html
+++ b/adidas-project-men/adidas-project-men/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
   <link rel="stylesheet" href="./style.css">
 
-  <title>Document</title>
+  <title>ADIDAS-MEN</title>
 </head>
 <header>
   <div class="topline">
